--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -11,6 +11,9 @@
         = f.label :email, "邮箱"
         = f.text_field :email, :class=>"f-text"
       .field-group
+        = f.label :mobile, "手机"
+        = f.text_field :mobile, :class=>"f-text"
+      .field-group
         = f.label :password, "密码"
         = f.password_field :password, :class=>"f-text"
       .field-group
