--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -71,15 +71,16 @@
   .alert_out#alert_out{:style=>"top: 200px;"}
     %h3 发送到手机
     = form_tag coupons_path do |f|
-      = hidden_field_tag :product_id, @product.id
-      = label_tag :title, @product.title
-      %br
-      = label_tag :mobile, "手机："
-      = text_field_tag :mobile, nil
-      %br
-      = label_tag :captcha, "验证码："
-      = text_field_tag :captcha, nil
-      %br
-      = submit_tag "确定"
-      %input{:type=>"button", :value=>"取消", :name=>"cancel", :onclick=>"hideModal();"}
+      .field-group
+        = hidden_field_tag :product_id, @product.id
+        = label_tag :title, @product.title
+      .field-group
+        = label_tag :mobile, "手机："
+        = text_field_tag :mobile, current_user ? current_user.mobile : ""
+      .field-group
+        = label_tag :captcha, "验证码："
+        = show_simple_captcha(:code_type=>"numeric")
+      .field-group
+        = submit_tag "确定"
+        %input{:type=>"button", :value=>"取消", :name=>"cancel", :onclick=>"hideModal();"}
 
