modify modal size

--- a/app/views/products/_send_coupon.html.haml
+++ b/app/views/products/_send_coupon.html.haml
@@ -1,6 +1,6 @@
-.alert_mask#alert_mask{:style=>"display: none; height: 1066px;"}
+.alert_mask#alert_mask
   <!--[if lte IE 6]><iframe frameborder="0" src=""></iframe><![endif]-->
-  .alert_out#alert_out{:style=>"top: 200px;"}
+  .alert_out#alert_out
     %h3 发送到手机
     = form_tag coupons_path do |f|
       .field-group
