--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -1,42 +1,42 @@
 @charset "utf-8";
-/*alert*/
 .alert_mask {
-	position:absolute;
-	left:0;
-	top:0;
-	width:100%;
-	overflow:hidden;
-	height:1000px;
-	z-index:2147483647;
-	filter:progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr='#7F000000',endColorstr='#7F000000');
-	background:rgba(0,0,0,0.5);
-	font-size:14px;
-	display:none;
+    position:absolute;
+    width:100%;
+    height:1200px;
+    left:0;
+    top:0;
+    overflow:hidden;
+    z-index:2147483647;
+    filter:progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr='#7F000000',endColorstr='#7F000000');
+    background:rgba(0,0,0,0.5);
+    font-size:14px;
+    display:none;
 }
 .alert_mask iframe {
-	position:absolute;
-	width:100%;
-	height:999em;
-	top:0;
-	left:0;
-	z-index:0;
-	filter:alpha(opacity=0);
+    position:absolute;
+    width:100%;
+    height:999em;
+    top:0;
+    left:0;
+    z-index:0;
+    filter:alpha(opacity=0);
 }
 .alert_out {
-	position:relative;
-	z-index:2;
-	width:380px;
-	overflow:hidden;
-	margin:0 auto;
-	border:1px solid #bfd0d8;
-	background:#fff;
-	padding-bottom:30px;
+    position:relative;
+    z-index:2;
+    width:380px;
+    top: 200px;
+    overflow:hidden;
+    margin:0 auto;
+    border:1px solid #bfd0d8;
+    background:#fff;
+    padding-bottom:30px;
 }
 .alert_out h3 {
-	background:#cedde4;
-	height:26px;
-	line-height:26px;
-	border-bottom:1px solid #bfd0d8;
-	padding:0 1em;
-	letter-spacing:1px;
+    background:#cedde4;
+    height:26px;
+    line-height:26px;
+    border-bottom:1px solid #bfd0d8;
+    padding:0 1em;
+    letter-spacing:1px;
 }
