--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,4 +1,4 @@
-- provide(:title, "吉林市打折优惠信息 - 最快最全的打折信息聚合平台")
+- provide(:title, t('.title'))
 = render "map"
 = render "filters/filter"
 = render "products/index"
