--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -39,7 +39,7 @@
                 .floatLeft.fRSide
                   %span= @product.phone
               %li.listCol.clearfix
-                %label.floatLeft 用户印象：
+                %label.floatLeft= t('.impression')
                 .floatLeft.fRSide
                   %span 暂无
               %li.listCol.clearfix
