--- a/app/views/coupons/_couponlist.html.haml
+++ b/app/views/coupons/_couponlist.html.haml
@@ -1,9 +1,9 @@
 %table#order-list.coupons-table{:cellpadding=>"0", :cellspacing=>"0", :border=>"0"}
   %tr
-    %th{:width=>"auto"} 优惠券
-    %th{:width=>"50"} 状态
-    %th{:width=>"160"} 密码
-    %th{:width=>"60"} 操作
+    %th{:width=>"auto"}= t('.head_coupons')
+    %th{:width=>"50"}= t('.head_status')
+    %th{:width=>"160"}= t('.head_password')
+    %th{:width=>"60"}= t('.head_operation')
   - @coupons.each do |coupon|
     %tr{:class => cycle("alt", "")}
       %td.deal
@@ -17,5 +17,5 @@
       %td.unpay= coupon.password
       %td
         /= link_to "发送短信", "#", :onclick=>"showModal();"
-        = link_to "删除", coupon_path(coupon), :method => :delete, :confirm => "删除后不可恢复，确定删除？"
+        = link_to t('.delete'), coupon_path(coupon), :method => :delete, :confirm => t('.delete_confirm')
 
