--- a/app/views/coupons/_subbar.html.haml
+++ b/app/views/coupons/_subbar.html.haml
@@ -1,19 +1,19 @@
 %h2
   - case action_name 
   - when "index"
-    全部优惠券
+    = t('coupons.index.title')
   - when "unuse"
-    未使用优惠券
+    = t('coupons.unuse.title')
   - when "used"
-    已使用优惠券
+    = t('coupons.used.title')
 %uj.filter
   %li{:class => (action_name == "index" ? "current" : nil)}
-    = link_to "全部", coupons_path
+    = link_to t('.all_button'), coupons_path
   %li{:class => (action_name == "unuse" ? "current" : nil)}
-    = link_to "未使用", unuse_coupons_path
+    = link_to t('.unuse_button'), unuse_coupons_path
   %li{:class => (action_name == "used" ? "current" : nil)}
-    = link_to "已使用", used_coupons_path
-  %li{:class => (action_name == "filter" ? "current" : nil)}
-    = link_to "即将到期", "#"
-  %li{:class => (action_name == "filter" ? "current" : nil)}
-    = link_to "已过期", "#"
+    = link_to t('.used_button'), used_coupons_path
+  /%li{:class => (action_name == "filter" ? "current" : nil)}
+  /  = link_to "即将到期", "#"
+  /%li{:class => (action_name == "filter" ? "current" : nil)}
+  /  = link_to "已过期", "#"
