--- a/app/views/coupons/unuse.html.haml
+++ b/app/views/coupons/unuse.html.haml
@@ -1,4 +1,4 @@
-- provide(:title, "我的优惠券")
+- provide(:title, t('.title'))
 #content.coupons-box
   = render "shared/dashboard"
   .mainbox.mine#orders
