move string to locates

--- a/app/views/filters/category.html.haml
+++ b/app/views/filters/category.html.haml
@@ -1,4 +1,4 @@
-- provide(:title, "吉林#{filter_title(action_name, params[:id])}打折优惠信息")
+- provide(:title, t('.title', :category=>filter_title(action_name, params[:id])))
 = render "filters/filter"
 = render "products/index"
 #sidebar
