--- a/app/views/users/_error_messages.html.haml
+++ b/app/views/users/_error_messages.html.haml
@@ -1,6 +1,6 @@
 - if @user.errors.any?
   .common-tip
-    您的注册信息不满足以下要求：
+    = t('.messages_head')
     %ul
       - @user.errors.full_messages.each do |msg|
         %li= "* #{msg}"
