--- a/app/views/users/_subbar.html.haml
+++ b/app/views/users/_subbar.html.haml
@@ -1,14 +1,14 @@
 %h2
   - case action_name 
   - when "show"
-    个人信息
+    = t('users.show.title')
   - when "edit"
-    修改个人信息
+    = t('users.edit.title')
   - when "update"
-    修改个人信息
+    = t('users.edit.title')
 %uj.filter
   %li{:class => (action_name == "show" ? "current" : nil)}
-    = link_to "查看个人信息", user_path(@user)
+    = link_to t('.show_button'), user_path(@user)
   %li{:class => ((action_name == "edit" or action_name == "update") ? "current" : nil)}
-    = link_to "修改个人信息", edit_user_path(@user)
+    = link_to t('.edit_button'), edit_user_path(@user)
 
