--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,4 +1,4 @@
-- provide(:title, "个人信息")
+- provide(:title, t('.title'))
 #content.coupons-box
   = render "shared/dashboard"
   .mainbox.mine
@@ -6,18 +6,18 @@
     %ul
       %li.field-group
         %label
-        = "第 #{@user.id} 位会员"
+        = t('.user_number', :id=>@user.id)
       %li.field-group
-        %label 用户名:
+        %label= t('.name')
         %strong= @user.name
       %li.field-group
-        %label 邮箱:
+        %label= t('.email')
         = @user.email
       %li.field-group
-        %label 手机:
-        = @user.mobile ? @user.mobile : "未设置"
+        %label= t('.mobile')
+        = @user.mobile ? @user.mobile : t('.no_mobile')
       %li.field-group
-        %label 注册时间:
+        %label= t('.create_time')
         = @user.created_at.strftime("%Y年%m月%d日")
 
 #sidebar
