--- a/app/views/admin/districts/edit.html.haml
+++ b/app/views/admin/districts/edit.html.haml
@@ -1,4 +1,4 @@
-- provide(:title, "编辑区域")
+- provide(:title, t('.title'))
 #content.coupons-box
   #content-admin
     = render "admin/shared/dashboard"
