finish users move string to locates

--- a/app/views/admin/shared/_dashboard.html.haml
+++ b/app/views/admin/shared/_dashboard.html.haml
@@ -1,26 +1,26 @@
 .dashboard
   %ul
     %li{:class => (controller_name == "products" ? "current" : nil)}
-      = link_to "商品管理", admin_products_path
+      = link_to t('.products'), admin_products_path
       %span
 
     %li{:class => (controller_name == "shops" ? "current" : nil)}
-      = link_to "商家管理", admin_products_path
+      = link_to t('.shops'), admin_products_path
+      %span
+
+    %li{:class => (controller_name == "coupons" ? "current" : nil)}
+      = link_to t('.coupons'), admin_products_path
       %span
 
     %li{:class => (controller_name == "users" ? "current" : nil)}
-      = link_to "用户管理", admin_users_path
-      %span
-
-    %li{:class => (controller_name == "orders" ? "current" : nil)}
-      = link_to "订单管理", admin_products_path
+      = link_to t('.users'), admin_users_path
       %span
 
     %li{:class => (controller_name == "categories" ? "current" : nil)}
-      = link_to "分类管理", admin_categories_path
+      = link_to t('.categories'), admin_categories_path
       %span
 
     %li{:class => (controller_name == "districts" ? "current" : nil)}
-      = link_to "区域管理", admin_districts_path
+      = link_to t('.districts'), admin_districts_path
       %span
 
