--- a/app/views/admin/users/_form.html.haml
+++ b/app/views/admin/users/_form.html.haml
@@ -2,22 +2,22 @@
   #admin-product-info
     %table#admin-products-table
       %tr
-        %td 用户名：
+        %td= t('.name')
         %td= f.text_field :name, :size=>40
       %tr
-        %td 邮箱：
+        %td= t('.email')
         %td= f.text_field :email, :size=>40
       %tr
-        %td 手机：
+        %td= t('.mobile')
         %td= f.text_field :mobile, :size=>40
       %tr
-        %td 密码：
+        %td= t('.password')
         %td= f.password_field :password, :size=>40
       %tr
-        %td 确认密码：
+        %td= t('.password_confirm')
         %td= f.password_field :password_confirmation, :size=>40
       %tr
         %td
         %td#admin-products-table-submit
-          = f.submit "提交"
+          = f.submit t('.submit_button')
 
