--- a/app/views/admin/users/new.html.haml
+++ b/app/views/admin/users/new.html.haml
@@ -1,4 +1,4 @@
-- provide(:title, "新增用户")
+- provide(:title, t('.title'))
 #content.coupons-box
   #content-admin
     = render "admin/shared/dashboard"
