fix a couponmap bug

--- a/app/views/home/_couponmap.html.erb
+++ b/app/views/home/_couponmap.html.erb
@@ -1,21 +1,28 @@
 <script>
     function showCouponMap(){
         var map = new BMap.Map("couponmap");
-
-        <% @products.each do |product| %>
-            var marker2 = new BMap.Marker(new BMap.Point(<%= product.pos_x %>, <%= product.pos_y %>));
-            map.addOverlay(marker2);
-            var content = <%= '"'.html_safe %> \
-                <%= "<h1><a target='_blank' href='#{product_path(product)}'>#{product.title}</a></h1>".html_safe %> \
-                <%= "折扣范围：<strong> #{product.discount} </strong>折".html_safe %> \
-                <%= '"'.html_safe %>
-            var infoWindow2 = new BMap.InfoWindow(content);
-            marker2.addEventListener("click", function(){this.openInfoWindow(infoWindow2);});
-        <% end %>
-
         var point = new BMap.Point(<%= compute_map_center_x(@products) %>, <%= compute_map_center_y(@products) %>);
         map.centerAndZoom(point,16);
         // 禁止鼠标滚动，用户体验更好
         //map.enableScrollWheelZoom();
+
+        function addMarkerContent(point, content){
+            var marker = new BMap.Marker(point);
+            map.addOverlay(marker);
+            var infoWindow = new BMap.InfoWindow(content);
+            marker.addEventListener("click", function(){this.openInfoWindow(infoWindow);});
+        }
+
+        <% @products.each do |product| %>
+            var point = new BMap.Point(<%= product.pos_x %>, <%= product.pos_y %>);
+            var content = <%= '"'.html_safe %> \
+                <%= "<div style='color:#666;line-height:20px;'>".html_safe %> \
+                <%= "<h3 style='font-size:16px;'>吉林美优惠网</h3>".html_safe %> \
+                <%= "#{product.title}<br/>".html_safe %> \
+                <%= "折扣范围：<strong> #{product.discount} </strong>折<br/>".html_safe %> \
+                <%= "<a target='_blank' href='#{product_path(product)}'>详情 »</a>".html_safe %> \
+                <%= '</div>"'.html_safe %>;
+            addMarkerContent(point, content);
+        <% end %>
     };
 </script>
