--- a/app/views/companies/check_coupon.html.haml
+++ b/app/views/companies/check_coupon.html.haml
@@ -1,6 +1,6 @@
 - provide(:title, t('.title'))
 #content.pg-login
-  .mainbox
+  .mainbox.radius-box-shadow
     %h2= t('.title')
     .signup-section
       = form_tag update_coupon_companies_path, :method=>"post" do |f|
