--- a/app/views/home/_map.html.haml
+++ b/app/views/home/_map.html.haml
@@ -1,7 +1,7 @@
 / 必须在函数调用之前引用
 =render "couponmap"
 
-#filter
+#filter.radius-box-shadow
   #couponmap-title
     %h3= t('.map_title')
   #couponmap
