--- a/app/views/products/_index.html.haml
+++ b/app/views/products/_index.html.haml
@@ -1,5 +1,5 @@
 - @products.each do |product|
-  #filter
+  #filter.radius-box-shadow
     .clearfix
       .couponContentWrap
         .couponInfoWrap.clearfix
