--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,7 +1,7 @@
 - provide(:title, t('.title'))
 = render "error_messages"
 #content
-  .mainbox
+  .mainbox.radius-box-shadow
     %h2= t('.title')
     = form_for @user do |f|
       .field-group
