--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -6,12 +6,12 @@
   /    %li= link_to "加入收藏夹", "javascript:void(0);", {:class=>"fav", :id=>"favorite"}
   /    %li= link_to "邀请好友", "/referrals", {:class=>"refer", :target=>"_blank"}
   /    %li= link_to "常见问题", "/faq", {:class=>"last"}
-  .search.cf
+  .search.cf.radius-box-shadow
     %form{:action=>"/s/", :name=>"searchForm", :method=>"get"}
       %input.s-text{:name=>"w", :autocomplete=>"off", :placeholder=>"请输入商品名称、地址等", :type=>"text"}
       %input.s-submit{:hidefocus=>"true", :value=>"搜索", :type=>"submit"}
 .site-nav
-  .nav-wrapper.cf
+  .nav-wrapper.cf.radius-box-shadow
     %ul.nav
       %li= link_to "今日优惠", root_path, {:class=>"hover"}
       %li= link_to "美食", category_filter_path(1)
