--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -9,7 +9,7 @@
   = @product.title
 
 #content
-  #deal-intro.cf
+  #deal-intro.cf.radius-box-shadow
     .clearfix.floatLeft
       .discountContentWrap
         .globalTitle
@@ -44,7 +44,7 @@
                   %span= t('.noimpression')
               %li.listCol.clearfix
                 = link_to image_tag( "/assets/shop_now_c.jpg", :width=>"130", :height=>"44" ), "#", :onclick=>"showModal();"
-  #deal-intro.cf
+  #deal-intro.cf.radius-box-shadow
     .clearfix.floatLeft
       .discountContentWrap
         .discountDetailsInfo
@@ -52,7 +52,7 @@
           %p= @product.content.html_safe
 
 #sidebar
-  .side-single
+  .side-single.radius-box-shadow
     #mapbox{"data-latitude"=>@product.pos_x, "data-longitude"=>@product.pos_y}
     = javascript_include_tag "http://api.map.baidu.com/api?v=1.3"
     :javascript
@@ -61,7 +61,7 @@
     #maplink
       查看大图
 
-  .side-single
+  .side-single.radius-box-shadow
     = render "hot_products"
 
 = render "send_coupon"
